[tool.poetry]
name = "getproxies"
version = "1.0.0"
description = "Scraper of free online proxies"
authors = ["granitosaurus <tinarg@protonmail.com>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
parsel = "^1.5.2"
requests = "^2.22.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
getproxies = 'getproxies.cli:main'
